crates/jsonschema-codegen/tests/ui/invalid_pattern_coverage_regex.rs
#[jsonschema::validator(schema = r#"{"patternProperties":{"(":{}},"additionalProperties":false}"#)]
struct Validator;

fn main() {}
